ADD : New WebApp Design on Svelte

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="./uikit/uikit.css">
     <link rel="stylesheet" href="./uikit/uikit-rtl.css">
+    <link rel="stylesheet" href="./fonts/pretendard.css">
+    <link rel="stylesheet" href="./fonts/SCDream.css">
     <script src="./uikit/uikit.js"></script>
     <script src="./uikit/uikit-icons.js"></script>
 
